umad: Created a function to get the users number

--- a/README
+++ b/README
@@ -4,5 +4,6 @@
 	All writed for the servers of PCEasyNET.
 
 	Without warranty of ANY kind.
+	Btw, I'm a newbie in programming.
 
 	(Sorry my very poor english T_T)
