--- a/umad/README
+++ b/umad/README
@@ -3,3 +3,6 @@
 
 	Use the graphs of Mikrotik to get the number of users and output in csv format. (sh)
 	Make a graph with the csv file. (perl)
+
+	Usage?
+		Schedule with cron and pipe to the users.csv file.
